# 2952O-Mirobot-ROS2

./: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mirobot_urdf_ros2/lib/mirobot_urdf_ros2/: mirobot_write_node
install/mirobot_urdf_ros2/share/ament_index/resource_index/package_run_dependencies/: mirobot_urdf_ros2
install/mirobot_urdf_ros2/share/mirobot_urdf_ros2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: mirobot_write_node.cpp
